# marehmakom

./: README.md  pyproject.toml
data/: prepare_dataset_for_quote_segment.ipynb
src/marehmakom/: __init__.py  config.py  download.py  infer.py  model.py  postinstall.py
tools/: postinstall.py
train/: train_labse_unet_model.ipynb
